--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Ryan Hiller <allamericanslacker@gmail.com> (https://ryanhiller.dev/)",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "yahoo-finance": "^0.3.7"
